--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello world</title>
-  <link rel="stylesheet" href="chat.css">
+  <link rel="stylesheet" href="./chat-style.css" type="text/css">
 </head>
 
 <script src="/socket.io/socket.io.js"></script>
